# rave

./: .travis.yml  CMakeLists.txt  vcconfig.h
UnitTests/: CMakeLists.txt  HelperFunctionsTest.cxx  RaveCylinder.cxx  RavePlane.cxx  RaveTest.cxx
cmake/: FindROOT.cmake
src/: CMakeLists.txt
src/DataFormats/CLHEP/interface/: Migration.h
src/DataFormats/GeometrySurface/src/: BlockWipedAllocator.cc
src/ROOT/src/: GenVector_Throw.cc
src/RaveBase/: CMakeLists.txt
src/RaveBase/Converters/interface/: CmsToRaveObjects.h  HelperFunctions.h  PerigeeToRaveObjects.h  PropagatorWrapper.h  RaveStreamers.h  RaveToAlgebraicObjects.h  RaveToCmsObjects.h  RaveToPerigeeObjects.h
src/RaveBase/Converters/src/: CmsToRaveObjects.cc  HelperFunctions.cc  MagneticFieldWrapper.cc  PerigeeToRaveObjects.cc  PropagatorWrapper.cc  RaveStreamers.cc  RaveToAlgebraicObjects.cc  RaveToCmsObjects.cc  RaveToPerigeeObjects.cc
src/RaveBase/RaveEngine/src/: RaveBeamSpotSingleton.cc
src/RaveBase/RaveInterface/rave/: AbstractPerigeeAccess.h  AbstractTrack.h  AbstractVertex.h  BasicKinematicConstraint.h  BasicKinematicParticle.h  BasicKinematicTree.h  BasicKinematicVertex.h  BasicMultipleKinematicConstraint.h  BasicTrack.h  BasicTransientTrackKinematicParticle.h  BasicVertex.h  BasicVirtualKinematicParticle.h  Charge.h  CheckedFloat.h  ConstantMagneticField.h  Covariance33D.h  Covariance3D.h  Covariance3To6D.h  Covariance4D.h  Covariance6D.h  Covariance7D.h  Cylinder.h  Ellipsoid3D.h  Exception.h  FlavorTagFactory.h  KinematicConstraint.h  KinematicConstraintBuilder.h  KinematicParticle.h  KinematicTree.h  KinematicTreeFactory.h  KinematicVertex.h  Logger.h  MagneticField.h  MultipleKinematicConstraint.h  PerigeeCovariance3D.h  PerigeeCovariance5D.h  PerigeeParameters3D.h  PerigeeParameters5D.h  PerigeeParameters6D.h  Plane.h  (+14 more)
src/RaveBase/RaveInterface/src/: BasicKinematicParticle.cc  BasicKinematicVertex.cc  BasicTrack.cc  BasicTransientTrackKinematicParticle.cc  ConstantMagneticField.cc  Covariance6D.cc  Covariance7D.cc  Cylinder.cc  FlavorTagFactory.cc  KinematicParticle.cc  KinematicTreeFactory.cc  Plane.cc  Track.cc  TransientTrackKinematicParticle.cc  VacuumPropagator.cc  Vector4D.cc  Vector7D.cc  Vertex.cc  VertexFactory.cc
src/RaveTools/Converters/interface/: MagneticFieldSingleton.h  PropagatorSingleton.h
src/RaveTools/Converters/src/: MagneticFieldSingleton.cc  PropagatorSingleton.cc
src/RecoBTag/: CMakeLists.txt
src/RecoVertex/: CMakeLists.txt
src/RecoVertex/KinematicFit/: CMakeLists.txt
src/RecoVertex/KinematicFit/src/: ConstrainedTreeBuilder.cc  FinalTreeBuilder.cc  KinematicConstrainedVertexUpdator.cc
src/RecoVertex/KinematicFitPrimitives/interface/: KinematicParticle.h  KinematicPerigeeConversions.h  KinematicState.h  TransientTrackKinematicStateBuilder.h
src/RecoVertex/KinematicFitPrimitives/src/: KinematicPerigeeConversions.cc  KinematicState.cc  TransientTrackKinematicStateBuilder.cc
src/RecoVertex/VertexTools/interface/: SequentialVertexFitter.h
src/RecoVertex/VertexTools/src/: PerigeeLinearizedTrackState.cc
src/TrackingTools/AnalyticalJacobians/interface/: JacobianCurvilinearToLocal.h  JacobianLocalToCurvilinear.h
src/TrackingTools/AnalyticalJacobians/src/: JacobianCurvilinearToLocal.cc  JacobianLocalToCurvilinear.cc
src/TrackingTools/GeomPropagators/interface/: AnalyticalPropagator.h  AnalyticalTrajectoryExtrapolatorToLine.h  HelixArbitraryPlaneCrossing.h  HelixArbitraryPlaneCrossing2Order.h  HelixBarrelCylinderCrossing.h  HelixBarrelPlaneCrossingByCircle.h  HelixForwardPlaneCrossing.h  HelixPlaneCrossing.h  Propagator.h  StraightLineBarrelCylinderCrossing.h  StraightLineCylinderCrossing.h  StraightLinePlaneCrossing.h
src/TrackingTools/GeomPropagators/src/: AnalyticalPropagator.cc  AnalyticalTrajectoryExtrapolatorToLine.cc  HelixArbitraryPlaneCrossing.cc  HelixArbitraryPlaneCrossing2Order.cc  HelixBarrelCylinderCrossing.cc  HelixBarrelPlaneCrossingByCircle.cc  HelixForwardPlaneCrossing.cc  IterativeHelixExtrapolatorToLine.cc  PropagationDirectionChooser.cc  Propagator.cc  StraightLineBarrelCylinderCrossing.cc  StraightLineCylinderCrossing.cc  StraightLinePlaneCrossing.cc
src/TrackingTools/PatternTools/interface/: ClosestApproachInRPhi.h  TransverseImpactPointExtrapolator.h
src/TrackingTools/PatternTools/src/: ClosestApproachInRPhi.cc  TSCPBuilderNoMaterial.cc  TransverseImpactPointExtrapolator.cc  TwoTrackMinimumDistance.cc  TwoTrackMinimumDistanceHelixHelix.cc  TwoTrackMinimumDistanceHelixLine.cc  TwoTrackMinimumDistanceLineLine.cc
src/TrackingTools/TrajectoryParametrization/interface/: CartesianTrajectoryError.h  GlobalTrajectoryParameters.h
src/TrackingTools/TrajectoryParametrization/src/: GlobalTrajectoryParameters.cc
src/TrackingTools/TrajectoryState/interface/: BasicSingleTrajectoryState.h  BasicTrajectoryState.h  FreeTrajectoryState.h  PerigeeConversions.h  TrajectoryStateClosestToPoint.h  TrajectoryStateOnSurface.h  TrajectoryStateTransform.h
src/TrackingTools/TrajectoryState/src/: BasicSingleTrajectoryState.cc  PerigeeConversions.cc  TrajectoryStateClosestToPoint.cc  TrajectoryStateOnSurface.cc  TrajectoryStateTransform.cc
src/TrackingTools/TransientTrack/interface/: BasicTransientTrack.h  GsfTransientTrack.h  TrackTransientTrack.h  TransientTrack.h  TransientTrackBuilder.h  TransientTrackFromFTS.h
src/TrackingTools/TransientTrack/src/: GsfTransientTrack.cc  TrackTransientTrack.cc  TransientTrack.cc  TransientTrackBuilder.cc
tests/: CMakeLists.txt  kinematics01.cc  kinematics02.cc  kinematics03.cc  propagatortests.cc
